--- a/example/index.html
+++ b/example/index.html
@@ -19,8 +19,15 @@
     <div class="btns">
       <button>Info</button>
       <button data-level="success">Success</button>
+      <button data-level="warning">Warning</button>
       <button data-level="error">Error</button>
       <button data-top="100">Offset Top</button>
+    </div>
+    <div>
+      <p class="notice-success">Success</p>
+      <p class="notice-warning">Warning</p>
+      <p class="notice-error">Error</p>
+      <p class="notice-info">Info</p>
     </div>
     <script src="jquery-1.8.1.min.js"></script>
     <script src="../dist/notice.js"></script>
