--- a/example/index.html
+++ b/example/index.html
@@ -6,34 +6,36 @@
     <link rel="stylesheet" href="../dist/notice.css"/>
     <script src="live.js"></script>
     <style>
-      body {
+      .wrapper {
         width: 980px;
-        margin: 0 auto;
+        margin: 10px auto;
+        border: 1px solid #ccc;
       }
       .btns {
-        margin-top: 40px;
+        padding-top: 40px;
       } 
     </style>
   </head>
   <body>
-    <div class="btns">
-      <button>Info</button>
-      <button data-level="success">Success</button>
-      <button data-level="warning">Warning</button>
-      <button data-level="error">Error</button>
-      <button data-top="100">Offset Top</button>
-    </div>
-    <div>
-      <p class="notice-success">Success</p>
-      <p class="notice-warning">Warning</p>
-      <p class="notice-error">Error</p>
-      <p class="notice-info">Info</p>
+    <div class="wrapper">
+      <div class="btns">
+        <button>Info</button>
+        <button data-level="success">Success</button>
+        <button data-level="warning">Warning</button>
+        <button data-level="error">Error</button>
+        <button data-top="100">Offset Top</button>
+      </div>
+      <div>
+        <p class="notice-success">Success</p>
+        <p class="notice-warning">Warning</p>
+        <p class="notice-error">Error</p>
+        <p class="notice-info">Info</p>
+      </div>
     </div>
     <script src="jquery-1.8.1.min.js"></script>
     <script src="../dist/notice.js"></script>
     <script>
-      //$.notice.defaults.width = '300px';
-      //$.notice.defaults.offsetLeft = '300px'
+      $.notice.defaults.container = '.wrapper';
       $('button').on('click', function() {
         var level = $(this).data('level') || 'info';
         var top = $(this).data('top') || 0;
