--- a/example/index.html
+++ b/example/index.html
@@ -32,7 +32,7 @@
         <p class="notice-info">Info</p>
       </div>
     </div>
-    <script src="jquery-1.8.1.min.js"></script>
+    <script src="../compontents/jquery/jquery.js"></script>
     <script src="../dist/notice.js"></script>
     <script>
       $.notice.defaults.container = '.wrapper';
