--- a/example/index.html
+++ b/example/index.html
@@ -32,6 +32,8 @@
         <button data-level="warning">Warning</button>
         <button data-level="error">Error</button>
         <button data-top="100">Offset Top</button>
+        <button data-level="success" data-anchor="bottom">Bottom</button>
+        <button data-bottom="100" data-anchor="bottom">Offset Bottom</button>
       </div>
       <!--<div>-->
         <!--<p class="notice-success">Success</p>-->
@@ -47,10 +49,14 @@
       $('button').on('click', function() {
         var level = $(this).data('level') || 'info';
         var top = $(this).data('top') || 0;
+        var bottom = $(this).data('bottom') || 0;
+        var anchor = $(this).data('anchor') || 'top';
 
         $.notice('this is a '+ level +' message', {
           level: level,
-          offsetTop: top
+          offsetTop: top,
+          offsetBottom: bottom,
+          anchor: anchor
         });
       });
       setTimeout(function() {
