Changed offsetTop and offsetBottom to just be offset. Included some backwards compatibility for offsetTop.
Fixed #8

--- a/example/index.html
+++ b/example/index.html
@@ -54,8 +54,7 @@
 
         $.notice('this is a '+ level +' message', {
           level: level,
-          offsetTop: top,
-          offsetBottom: bottom,
+          offset: top || bottom,
           anchor: anchor
         });
       });
