--- a/test/index.html
+++ b/test/index.html
@@ -16,9 +16,26 @@
 <body>
   <div id="mocha"></div>
   <div id="fixture" style="display: none">
-
+    <div class="wrapper">
+      <div class="btns">
+        <button>Info</button>
+        <button data-level="success">Success</button>
+        <button data-level="warning">Warning</button>
+        <button data-level="error">Error</button>
+        <button data-top="100">Offset Top</button>
+        <button data-level="success" data-anchor="bottom">Bottom</button>
+        <button data-bottom="100" data-anchor="bottom">Offset Bottom</button>
+      </div>
+      <!--<div>-->
+        <!--<p class="notice-success">Success</p>-->
+        <!--<p class="notice-warning">Warning</p>-->
+        <!--<p class="notice-error">Error</p>-->
+        <!--<p class="notice-info">Info</p>-->
+      <!--</div>-->
+    </div>
   </div>
-  <script src="../dist/notice.js" data-cover></script>
+  <script src="../bower_components/jquery/jquery.js"></script>
+  <script src="../dist/notice.js"></script>
   <script src="notice.test.js"></script>
   <script>
     if (navigator.userAgent.indexOf('PhantomJS') < 0) {
