Switching to ES6

--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,7 @@
         <!--<p class="notice-info">Info</p>-->
       <!--</div>-->
     </div>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="../dist/notice.js"></script>
     <script>
       $.notice.defaults.container = '.wrapper';
