--- a/example/index.html
+++ b/example/index.html
@@ -2,46 +2,33 @@
 <html lang="en">
   <meta charset="utf-8" />
   <head>
-    <title></title>
+    <title>Notice - Example</title>
     <style>
       body {
         font-family: Helvetica, Arial;
       }
       .wrapper {
-        width: 980px;
-        margin: 10px auto;
-        border: 1px solid #ccc;
-      }
-      .btns {
-        padding-top: 40px;
-      }
-      div > p {
-        text-align: center;
-        display: inline-block;
-        padding: 10px 20px;
-        margin: 0 auto;
-        border-radius: 10px;
+        padding: 1em;
       }
     </style>
     <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <div class="wrapper">
-      <div class="btns">
-        <button>Default</button>
-        <button data-level="success">Success</button>
-        <button data-level="warning">Warning</button>
-        <button data-level="error">Error</button>
-        <button data-level="info">Info</button>
-      </div>
+      <h2>Click to display notices</h2>
+      <button data-level="default">Default</button>
+      <button data-level="success">Success</button>
+      <button data-level="warning">Warning</button>
+      <button data-level="error">Error</button>
+      <button data-level="info">Info</button>
     </div>
     <script src="../dist/notice.js"></script>
     <script>
       document.querySelectorAll('button').forEach(button => {
         button.addEventListener('click', (ev) => {
           Notice('Test notification', {
-            level: ev.currentTarget.dataset.level || 'info',
-            timeout: 3000
+            level: ev.currentTarget.dataset.level,
+            timeout: 6000
           });
         });
       });
